--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger">
-        <i class="material-icons">add_to_</i>
+        <i class="material-icons">add_to_photos</i>
     </a>
       <ul class="right hide-on-med-and-down">
         <li>
