--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     
-  <nav>
+  <nav class="blue lighten-3">
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger">
