add another file.html for users panel

--- a/user.html
+++ b/user.html
@@ -15,12 +15,12 @@
    <!-- navbar section ---------start-------------------- -->
   <nav class="z-depth-0 blue lighten-3 top-navbar">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo blue-text hide-on-med-and-up">Logo</a>
+      <a href="#!" class="brand-logo blue-text hide-on-med-and-up">User Manager</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger">
         <i class="material-icons">menu</i>
     </a>
       <ul class="hide-on-med-and-down">
-        <li>
+        content
             <a href="" class="blue-text">Home</a>
         </li>
         <li>
@@ -91,23 +91,18 @@
 
 
 
-    <!-- home section ---------start-------------------- -->
-    <section class="flex-c-m flex-col sizefull p-r-20 p-l-20 p-t-100">
-      <img src="assets/images/images/codeyad.png" 
-      alt="codeyad academy : www.codeyad.com" 
-      class="w-full max-w-200 filter_shadow">
-      
-      <a href="https://codeyad.com/courses" 
-      class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 rounded_pill">
-        Programming Tutorial
-      </a>
-      <a href="/users.html" 
-      class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 rounded_pill hide-on-med-and-up">
-        User Manager
-      </a>
-
-    </section>
-    <!-- home section ---------end------- -->   
+    <!-- content section ---------start-------------------- -->
+  <section>
+    <div>
+        <button class="waves-effect waves-light btn blue darken-2 p-l-30 p-r-30 w-full rounded_pill flex-c">
+            <i class="material-icons m-r-5">
+            Add
+            </i>
+            Add User
+        </button>
+    </div>
+  </section>
+    <!-- content section ---------end------- -->   
 
     <script src="assets/materialize/js/materialize.min.js"></script>
     <script src="assets/js/main.js"></script>
