add another botton for users panel

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     
     
    <!-- navbar section ---------start-------------------- -->
-  <nav class="z-depth-0 blue lighten-3 top-navbar">
+  <nav class="blue lighten-3 z-depth-0  top-navbar">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo blue-text hide-on-med-and-up">Logo</a>
+      <a href="#!" class="brand-logo blue-text hide-on-med-and-up">Home</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger">
         <i class="material-icons">menu</i>
     </a>
@@ -24,7 +24,7 @@
             <a href="" class="blue-text">Home</a>
         </li>
         <li>
-            <a href="/users.html" class="blue-text">User Manager</a>
+            <a href="/user.html" class="blue-text">User Manager</a>
         </li>
         <li>
             <a href="https://codeyad.com/courses" class="blue-text">codeyad</a>
@@ -35,7 +35,6 @@
       </ul>
     </div>
   </nav>
-
 
   <ul class="sidenav" id="mobile-demo"> 
     <li>
@@ -77,12 +76,12 @@
         </a>
     </li>
       <li>
-        <a class="waves-effect" href="#!">
+        <a class="waves-effect" href="index.html">
           Home
         </a>
     </li>
     <li>
-      <a class="waves-effect" href="#!">
+      <a class="waves-effect" href="user.html">
         Users
       </a>
   </li>
@@ -101,7 +100,7 @@
       class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 rounded_pill">
         Programming Tutorial
       </a>
-      <a href="/users.html" 
+      <a href="/user.html" 
       class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 rounded_pill hide-on-med-and-up">
         User Manager
       </a>
